# src/server/handlers/api/v1/notes/mod.rs
@@ -1,9 +1,10 @@
-use axum::routing::post;
+use axum::routing::get;
 
 use crate::server::AppState;
 
 pub mod create;
+pub mod list;
 
 pub fn router() -> axum::Router<AppState> {
-    axum::Router::new().route("/", post(create::create_note))
+    axum::Router::new().route("/", get(list::list_notes).post(create::create_note))
 }
